<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NumberFragment">

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="265dp"
        android:layout_height="76dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/from"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="264dp"
        android:layout_height="77dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/to"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="263dp"
        android:layout_height="74dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="248dp"
        android:ems="10"
        android:hint="@string/howmany"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/number_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="340dp"
        android:text= "@string/button_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="356dp"
        android:layout_height="290dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="405dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>